# jsonpatch2pymongo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  setup.py  test_main.py
.github/workflows/: check.yml  release.yml
src/jsonpatch2pymongo/: main.py
tests/: test_main.py
